--- a/src/styles/Forms.module.scss
+++ b/src/styles/Forms.module.scss
@@ -8,16 +8,13 @@ form {
 }
 
 .forms {
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
-    
 }
 
 .group {
     display: flex;
     justify-content: space-between;
-    margin: auto;
-    padding: auto;
     padding: 10px;
 }
-
