--- a/src/styles/Forms.module.scss
+++ b/src/styles/Forms.module.scss
@@ -2,19 +2,49 @@ label {
     margin-right: 30px;
 }
 
-form {
-    background-color: rgba(215, 215, 215, 0.9);
-    border-radius: 10px;
+textarea {
+    width: 350px;
+    height: 350px;
+}
+
+.wrapper {
+        display: grid;
+        place-items: center;
+        margin-top: 30px;
 }
 
 .forms {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+}
+
+
+.input {
+    grid-column: 1;
+    background-color: rgba(215, 215, 215, 0.9);
+    border-radius: 10px;
+    padding: 30px;
+}
+
+.output {
+    grid-column: 2;
+    background-color: rgba(215, 215, 215, 0.9);
+    border-radius: 10px;
+    padding: 20px 100px 20px 20px;
+}
+
+.notes {
+    grid-column: 3;
+    background-color: rgba(215, 215, 215, 0.9);
+    border-radius: 10px;
+    padding-left: 30px;
 }
 
 .group {
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    margin-bottom: 20px;
 }
